--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,79 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+* {
     margin: 0;
-    background-color: #333;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+}
+
+body {
+    background-color: #2c2c2c;
+    color: #f4f4f4;
+}
+
+div#banner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #000000;
+    width: 100%;
+}
+
+div#banner-content {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 10px;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+}
+
+div#main-content {
+    padding-top: 70px;
+    text-align: center;
+    padding: 20px;
 }
 
 .button_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 40px 0; /* Increased padding at the top */
     background: linear-gradient(45deg, #FFD700, #000);
-    padding: 20px;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    margin-bottom: 20px;
 }
 
 .button_navigation {
     background-color: #000;
+    border: 4px solid #FFD700; /* Increased border size */
     color: #FFD700;
-    border: none;
-    padding: 10px 20px;
-    margin: 5px;
-    font-size: 16px;
-    border-radius: 8px;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+    margin: 10px;
     cursor: pointer;
-    transition: transform 0.3s, box-shadow 0.3s;
+    border-radius: 12px;
+    transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .button_navigation:hover {
     transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(255, 215, 0, 0.6);
+}
+
+.intro_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.offerings_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
